# palestinhas

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
palestrinhas/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
palestrinhas/migrations/: 0001_initial.py  0002_alter_palestras_options_alter_palestras_status.py  0002_alter_palestras_user_comentarios.py  0003_palestras_user_alter_palestras_data_criacao.py
palestrinhas/templates/palestras/: delete_palestra.html  index.html  palestra_detail.html  palestra_edit.html  palestras_by_user.html
palestrinhas/templates/registration/: logged_out.html  login.html
