[tool.poetry]
name = "palestrinas"
version = "0.1.0"
description = "aplicação para cadastro de palestras"
authors = ["Carine Neris <carine_neris@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
